--- a/Assignment-1.html
+++ b/Assignment-1.html
@@ -13,11 +13,11 @@
         <fieldset>
           <legend>Name</legend>
           <label for="First Name">First Name</label> <br />
-          <input type="text" name="First Name" id="First Name" name="fname" />       
+          <input type="text" id="First Name" name="fname" />       
           <br />
           <br />
           <label for="Last Name">Last Name</label> <br />
-          <input type="text" name="Last Name" id="Last Name" name="lname" />       
+          <input type="text" id="Last Name" name="lname" />       
           
          </fieldset>
         <fieldset>
