--- a/Assignment-1.html
+++ b/Assignment-1.html
@@ -12,12 +12,12 @@
 
         <fieldset>
           <legend>Name</legend>
-          <label for="First Name">First Name</label> <br />
-          <input type="text" id="First Name" name="fname" />       
+          <label for="first name">First Name</label> <br />
+          <input type="text" id="first name" name="first-name" />       
           <br />
           <br />
-          <label for="Last Name">Last Name</label> <br />
-          <input type="text" id="Last Name" name="lname" />       
+          <label for="last name">Last Name</label> <br />
+          <input type="text" id="last name" name="last-name" />       
           
          </fieldset>
         <fieldset>
@@ -62,28 +62,28 @@
           <input
             type="checkbox"
             id="Chocolate Pudding"
-            name="Ice cream-type"
+            name="ice cream-type"
             value="Chocolate Pudding"
           />
           <label for="Chocolate Pudding">Chocolate Pudding</label> <br />
           <input
             type="checkbox"
             id=" Chocolate Peanut Butter"
-            name="Ice cream-type"
+            name="ice cream-type"
             value=" Chocolate Peanut Butter" checked
           />
           <label for=" Chocolate Peanut Butter"> Chocolate Peanut Butter</label> <br />
           <input
             type="checkbox"
             id=" Vanilla"
-            name="Ice cream-type"
+            name="ice cream-type"
             value=" Vanilla" 
           />
           <label for=" Vanilla"> Vanilla</label> <br />
           <input
             type="checkbox"
             id=" strowberry"
-            name="Ice cream-type"
+            name="ice cream-type"
             value=" strowberry"
           />
           <label for=" strowberry"> strowberry</label> <br />
@@ -91,8 +91,8 @@
           
           <!-- drop down Section-->
 
-          <label for="School">Select a School:</label> <br />
-          <select name="School" id="School">
+          <label for="school">Select a School:</label> <br />
+          <select name="School" id="school">
             <option value="Harvard">Harvard</option>
             <option value="MIT">MIT</option>
             <option value="Oxford">Oxford</option>
